crates/nebula-proto/tests/snapshots/messages__req_logs_subscribe.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 8,
  "jsonrpc": "2.0",
  "method": "logs.subscribe",
  "params": {
    "min_level": "warn",
    "target_prefix": "nebula_model",
    "trace_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EF"
  },
  "proto_version": 1
}
