crates/nebula-proto/tests/snapshots/messages__req_model_set_profile.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 6,
  "jsonrpc": "2.0",
  "method": "model.set_profile",
  "params": {
    "profile": "long"
  },
  "proto_version": 1
}
