crates/nebula-proto/tests/snapshots/messages__req_model_status.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 5,
  "jsonrpc": "2.0",
  "method": "model.status",
  "params": {},
  "proto_version": 2
}
