crates/nebula-proto/tests/snapshots/messages__req_resources_snapshot.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 7,
  "jsonrpc": "2.0",
  "method": "resources.snapshot",
  "params": {},
  "proto_version": 2
}
