crates/nebula-proto/tests/snapshots/messages__req_tools_call.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 11,
  "jsonrpc": "2.0",
  "method": "tools.call",
  "params": {
    "arguments": {
      "path": "src/main.rs"
    },
    "tool": "read_file",
    "trace_id": "01K6P3Z8M4Q7X2V9B5N1C0D3EF"
  },
  "proto_version": 2
}
