crates/nebula-proto/tests/snapshots/messages__req_tools_list.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 10,
  "jsonrpc": "2.0",
  "method": "tools.list",
  "params": {},
  "proto_version": 2
}
