crates/nebula-proto/tests/snapshots/messages__res_empty.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "id": 2,
  "jsonrpc": "2.0",
  "proto_version": 1,
  "result": {}
}
