crates/nebula-proto/tests/snapshots/messages__res_error.snap
---
source: crates/nebula-proto/tests/messages.rs
expression: value
---
{
  "error": {
    "code": -32001,
    "message": "model server is restarting"
  },
  "id": "abc",
  "jsonrpc": "2.0",
  "proto_version": 2
}
